--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -34,3 +34,14 @@ h1, h2, h3, h4, h5, h6, .navbar {
 .btn {
 	border-radius: 0;
 }
+
+.feature {
+	width: 100%;
+	padding-left: 5%;
+	padding-right: 5%;
+}
+
+body {
+	background: image_url('squairy_light_@2X.png');
+	font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
+}
