--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="hero">
 	<br />
-	<div class="frosty col-10 offset-1">
+	<div class="frosty col-10 offset-1 text-center">
 		<br />
 		<h1>Learn Magic from the pros</h1>
 		<br />
@@ -9,4 +9,24 @@
 		    <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
 		    <br /><br />
 	</div>
+</div>
+
+<br />
+<div class="row feature text-center">
+	<div class="col-12 col-sm">
+		<h3>Amazing Courses</h3>
+		<br />
+		<p>Choose the classes you want at the times you like</p>
+	</div>
+<div class="col-12 col-sm">
+	<h3>Learn at Your Own Pace</h3>
+	<br />
+	<p>In full-time, part-time, or online classes</p>
+</div>
+
+<div class="col-12 col-sm">
+	<h3>Flexible Payment Options</h3>
+	<br />
+	<p>We offer discounts, scholarships, and financing to qualified applicants</p>
+</div>
 </div>
