--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -42,6 +42,6 @@ h1, h2, h3, h4, h5, h6, .navbar {
 }
 
 body {
-	background: image_url('squairy_light_@2X.png');
+	background: image_url('fabric_plaid.png');
 	font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
