Added student course listing and adjusted pages.

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,8 +6,8 @@
 		<br />
 		<h2>I'm an Illusionist, Michael</h2>
 		<br />
-		    <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
-		    <br /><br />
+		<%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
+		<br /><br />
 	</div>
 </div>
 
@@ -27,6 +27,6 @@
 <div class="col-12 col-sm">
 	<h3>Flexible Payment Options</h3>
 	<br />
-	<p>We offer discounts, scholarships, and financing to qualified applicants</p>
+	<p>Discounts, scholarships, and financing available to qualified applicants</p>
 </div>
 </div>
