--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -6,11 +6,11 @@
 	<br class="clr" />
 
 	<div class="text-center">
-		<%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), class: 'btn btn-priamry btn-lg' %>
+		<%= link_to 'Add a new section...', new_instructor_course_section_path(current_course), class: 'btn btn-primary btn-lg' %>
 	</div>
 
 <ul>
-	<% current_course.sections.each.do |section| %>
+	<% current_course.sections.each do |section| %>
 	<li>
 		<%= section.title %>
 		<%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
