--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,6 +7,7 @@
 	<% @courses.each do |course| %>
 		<h2 class="text-center"><%= course.title %></h2>
 			<%= link_to course.title, course_path(course) %>
+			<%= image_tag course.image.to_s, class: "mx-auto d-block img-fluid" %>
 		</h2>
 	<br />
 	<div class="row">
