--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="booyah-box col-10 offset-1">
 	<h1><%= @course.title %></h1>
-	<br />
+	<%= image_tag @course.image.to_s, class: "mx-auto d-block img-fluid" %>
 	<div class="row">
 	<div class="col-sm-4 col-12 text-center">
 		<span class="badge badge-default">
