Added student enrollment. Everything working.

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,19 +2,27 @@
 
 <div class="booyah-box col-10 offset-1">
 	<h1><%= @course.title %></h1>
-	<%= image_tag @course.image.to_s, class: "mx-auto d-block img-fluid" %>
+		<%= image_tag @course.image.to_s, class: "mx-auto d-block img-fluid" %>
 	<div class="row">
 	<div class="col-sm-4 col-12 text-center">
 		<span class="badge badge-default">
 			<%= number_to_currency @course.cost %>
 		</span>
 
-
 		<% if current_user && current_user == @course.user %>
-				<br />
-				<br />
-				<%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-primary btn-large' %>
-			<% end %>
+			<br />
+			<br />
+			<%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-primary btn-large' %>
+		<% end %>
+
+			<br />
+			<br />
+
+      <% if current_user && current_user.enrolled_in?(@course) %>
+        <h3 class="badge badge-info">You Are Enrolled!</h3>
+      <% else %>
+        <%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
+      <% end %>
 	</div>
 
 	<div class="col-sm-8 col-12">
