--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -3,7 +3,7 @@
 <div class="booyah-box col-10 offset-1">
 	<h1 class="text-center">Learn something today</h1>
 	<hr />
-
+	<%= paginate @courses %>
 	<% @courses.each do |course| %>
 		<h2 class="text-center"><%= course.title %></h2>
 			<%= link_to course.title, course_path(course) %>
