--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -96,4 +96,45 @@ body {
   font-size: 25px;
 }
 
+ul {
+  list-style-type: none;
+}
 
+.section-li {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #e4e4e4 #bebebd;
+}
+
+ul .header {
+  font-size: 25px;
+}
+
+ul .header .fa {
+  font-size: 20px;
+}
+
+.section-li {
+  border: 1px solid;
+  border-solor: #e4e4e4 #bebebd #e4e4e4 #bebebd
+  padding: 20px;
+  margin: 20px;
+}
+
+.lessons li {
+  background: black;
+  color: white;
+  margin: 10px;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
+  padding: 8px;
+  font-size: 15px;
+}
+
+.lesson li b {
+  font-size: 25px;
+  font-weight: 100;
+}
+
+.lesson li p {
+  margin: 0;
+}
