fixed issues with dashboard. Seems to be working fine now.

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -115,7 +115,7 @@ ul .header .fa {
 
 .section-li {
   border: 1px solid;
-  border-solor: #e4e4e4 #bebebd #e4e4e4 #bebebd
+  border-color: #e4e4e4 #bebebd #e4e4e4 #bebebd;
   padding: 20px;
   margin: 20px;
 }
