--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,5 +1,10 @@
 <script>
   $(function() {
+    $('.new-lesson-button').click(function( event ) {
+  var lessonUrl = $( event.target).data('lesson-url');
+  $('#newLessonForm').attr('action', lessonUrl);
+});
+
     $('.lessons').sortable({
       update: function( event, ui ) {
         $.ajax({
@@ -24,7 +29,10 @@
     });
 
   });
-</script>
+</script> 
+ 
+ 
+
 
 
 <br />
@@ -35,7 +43,7 @@
 	<%= image_tag current_course.image.to_s, class: 'img-fluid' %>
 
 	<div class="text-center">
-    <!-- Button trigger modal -->
+    <!-- My Secyion Button trigger modal -->
       <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newSectionalModal">
         Add a new section...
       </button>
@@ -48,7 +56,10 @@
       <span class="fa fa-ellipsis-v"></span>
 		  <%= section.title %>
     </div>
-		<%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
+<!-- My Lesson Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg float-right new-lesson-button" data-toggle="modal" data-target="#newLessonModal" data-lesson-url="<% instructpor_section_lesson_apth(section %>">
+ New Lesson...
+</button>
     <br class="clr" />
     <br class="clr" />
     <ul class="lessons">
@@ -80,7 +91,7 @@
 
 </div>
 
-<!-- Modal -->
+<!-- My Section Modal -->
 <div class="modal fade" id="newSectionalModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -99,6 +110,32 @@
           <%= f.submit "Add a section", class: 'btn btn-primary' %>
           </div>
       <% end %>
+    </div>
+  </div>
+</div>
+
+<!-- My Lesson Modal -->
+<div class="modal fade" id="NewLessonModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <h4 class="modal-title" id="NewLessonModalLabel">Add a new lesson</h4>
+      </div>
+         <%= simple_form_for @lesson, url: "#", html: {id: 'newLessonForm' } do |f| %>
+         <div class="modal-body">
+          <%= f.input :title %>
+          <%= f.input :subtitle %>
+          <%= f.input :video %>
+          </div>
+          <div class="modal footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <%= f.submit "Add the lesson", class: 'btn btn-primary' %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
