--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,11 +59,43 @@
 
     <div id="footer">
   <div class="container">
-    <b>Teachers</b>
-    <br />
-    <%= link_to 'Teach a Course', new_instructor_course_path %>
-  </div>
-</div>
+    <div class="row">
+      <div class="col-12 col-sm-3">
+        <b>Teachers</b>
+        <br />
+        <%= link_to 'Teach a Course', new_instructor_course_path %>
+        <br />
+        <%= link_to 'My Dashboard', dashboard_path %>
+      </div>
+      <div class="col-12 col-sm-3">
+        <b>About</b>
+        <br />
+        <%= link_to 'Team', '#' %>
+        <br />
+        <%= link_to 'Careers', '#' %>
+        <br />
+        <%= link_to 'Privacy Policy', '#' %>
+      </div>
+      <div class="col-12 col-sm-3">
+        <b>Contact</b>
+        <br />
+        antonia.a.husrt@gmail.com
+        <br />
+        P.O. Box 109
+        <br />
+        Comptche CA 95427
+      </div>
+      <div class="col-12 col-sm-3 social">
+        <b>Social</b>
+        <br />
+        <br />
+          <%= link_to 'http://github.com/toniahurst' do %>
+            <span class="fa fa-github-square fa-2x social-button"></span>
+          <% end %>
+        <span class="fa fa-facebook-square fa-2x social-button"></span>
+        <span class="fa fa-twitter-square fa-2x social-button"></span>
+      </div>
+    </div>
 
   <script src="http://vjs.zencdn.net/5.12.6/video.js"></script>
   <script src="http://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
