--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,14 +67,14 @@
         <br />
         <%= link_to 'My Dashboard', dashboard_path %>
       </div>
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <b>About</b>
         <br />
         <%= link_to 'Team', '#' %>
         <br />
         <%= link_to 'Careers', '#' %>
         <br />
-        <%= link_to 'Privacy Policy', '#' %>
+        <%= link_to 'Privacy Policy', privacy_path %>
       </div>
       <div class="col-12 col-sm-3">
         <b>Contact</b>
